# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = gracefull-shutdown-py
version = 0.2.2
author = Aleh Strakachuk
author_email = zifter.ai@gmail.com
home-page = https://github.com/zifter/gracefull-shutdown-py
description = attr: gracefull_shutdown.__doc__
long-description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license-file = LICENSE
platform = any
keywords = gracefull,shutdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
package_dir =
    gracefull_shutdown=src/gracefull_shutdown
    tests=src/tests
packages =
    gracefull_shutdown
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
